tests/test0147.exp
Parse error, unexpected ^ ( tests/test0147.ctr: 2 )
