tests/test0147.ctr
#NOAST
Pen write: 'aaa', brk.
{\ ^^. } run.
Pen write: 'aaa', brk.
